feat: Implement internationalization across the mobile app and introduce status modals for improved user feedback.

--- a/mobile/i18n/en.json
+++ b/mobile/i18n/en.json
@@ -1,25 +1,38 @@
 {
-  "auth.login.title": "Welcome Back",
-  "auth.login.subtitle": "Login to continue shopping",
-  "auth.login.username": "Username",
-  "auth.login.password": "Password",
-  "auth.login.forgot": "Forgot Password?",
-  "auth.login.button": "Login",
-  "auth.login.noAccount": "Don't have an account? ",
-  "auth.login.register": "Register",
-  "auth.register.title": "Create Account",
-  "auth.register.subtitle": "Join us and start shopping",
-  "auth.register.fullName": "Full Name",
-  "auth.register.email": "Email",
-  "auth.register.username": "Username",
-  "auth.register.password": "Password",
-  "auth.register.button": "Register",
-  "auth.register.hasAccount": "Already have an account? ",
-  "auth.register.login": "Login",
   "common.error": "Error",
   "common.success": "Success",
   "common.ok": "OK",
   "common.cancel": "Cancel",
+  "auth.login.title": "Welcome Back",
+  "auth.login.subtitle": "Sign in to continue your curated shopping experience.",
+  "auth.login.email.label": "EMAIL ADDRESS",
+  "auth.login.email.placeholder": "name@example.com",
+  "auth.login.password.label": "PASSWORD",
+  "auth.login.password.placeholder": "••••••••",
+  "auth.login.forgot": "Forgot Password?",
+  "auth.login.button": "Sign In",
+  "auth.login.biometric": "Sign in with Face ID",
+  "auth.login.orConnect": "Or connect with",
+  "auth.login.google": "Google",
+  "auth.login.apple": "Apple",
+  "auth.login.noAccount": "Don't have an account?",
+  "auth.login.signUp": "Sign Up",
+  "auth.register.title": "Create Account",
+  "auth.register.subtitle": "Join our exclusive community",
+  "auth.register.fullName.label": "FULL NAME",
+  "auth.register.fullName.placeholder": "John Doe",
+  "auth.register.email.label": "EMAIL ADDRESS",
+  "auth.register.password.label": "PASSWORD",
+  "auth.register.confirmPassword.label": "CONFIRM PASSWORD",
+  "auth.register.button": "Create Account",
+  "auth.register.hasAccount": "Already have an account?",
+  "auth.register.login": "Login",
+  "auth.error.fillAll": "Please fill in all fields",
+  "auth.error.passwordMismatch": "Passwords do not match",
+  "auth.error.registrationFailed": "Registration Failed",
+  "auth.error.loginFailed": "Login Failed",
+  "auth.error.biometricNotFound": "Biometric credentials not found. Please login manually first.",
+  "auth.error.input": "Input Error",
   "home.search.placeholder": "Search products...",
   "home.noProducts": "No products found",
   "product.details.back": "Go Back",
@@ -53,5 +66,94 @@
   "admin.manage.imageUrl": "Image URL",
   "admin.manage.stock": "Stock",
   "admin.manage.update": "Update Product",
-  "admin.manage.create": "Create Product"
+  "admin.manage.create": "Create Product",
+  "account.title": "Account",
+  "account.security": "Security",
+  "account.biometric": "Biometric Login (FaceID)",
+  "account.changePassword": "Change Password",
+  "account.personalData": "Personal Data",
+  "account.editProfile": "Edit Profile",
+  "account.paymentMethods": "Payment Methods",
+  "account.orderHistory": "Order History",
+  "account.dangerZone": "Danger Zone",
+  "account.deleteAccount": "Delete Account",
+  "account.biometric.success.title": "FaceID Active",
+  "account.biometric.success.message": "Biometric login has been successfully enabled. You no longer need to enter a password!",
+  "account.biometric.error.title": "Error",
+  "account.biometric.error.message": "Incorrect password. Please try again.",
+  "settings.title": "Settings",
+  "settings.notifications": "Notifications",
+  "settings.theme": "Theme",
+  "settings.language": "Language",
+  "settings.defaultView": "Default View",
+  "settings.legal.imprint": "Imprint",
+  "settings.legal.accessibility": "Accessibility",
+  "settings.legal.tracking": "Tracking Info",
+  "settings.legal.privacy": "Privacy Policy",
+  "settings.theme.choose": "Choose Theme",
+  "settings.theme.light": "Light",
+  "settings.theme.dark": "Dark",
+  "settings.theme.system": "System",
+  "settings.language.choose": "Choose Language",
+  "home.loginRequired.title": "Login Required",
+  "home.loginRequired.message": "Please login to add to wishlist",
+  "home.newBadge": "NEW",
+  "home.catalog": "Catalog",
+  "home.section.newArrivals": "New Arrivals",
+  "home.viewAll": "View All",
+  "category.all": "All",
+  "category.electronics": "Electronics",
+  "category.fashion": "Fashion",
+  "category.home": "Home",
+  "category.books": "Books",
+  "cart.freeShipping.away": "You're {amount} away from free shipping",
+  "cart.freeShipping.unlocked": "You've unlocked free shipping!",
+  "cart.shipping": "Shipping",
+  "cart.shipping.free": "FREE",
+  "cart.checkout.processing": "Process started...",
+  "profile.notifications.sub": "0 new",
+  "profile.myProfile": "Profile",
+  "profile.myProfile.sub": "Name, Profile Picture...",
+  "profile.account": "Account",
+  "profile.account.sub": "Data, Security, Plus...",
+  "profile.settings.sub": "Language, Theme...",
+  "profile.achievements": "Achievements",
+  "profile.achievements.sub": "Badges",
+  "profile.adminDashboard": "Admin Dashboard",
+  "profile.adminDashboard.sub": "Users & Stats...",
+  "product.notFound": "Product not found",
+  "product.goBack": "Go Back",
+  "product.limitedEdition": "Limited Edition",
+  "product.reviews": "reviews",
+  "product.selectSize": "Select Size",
+  "product.addToCart": "Add to Cart",
+  "product.addedToCart": "Added to Cart!",
+  "product.features": "Product Features",
+  "product.feature.shipping": "Free Shipping",
+  "product.feature.shipping.desc": "On orders over $50",
+  "product.feature.authentic": "100% Authentic",
+  "product.feature.authentic.desc": "Verified products",
+  "product.feature.returns": "30-Day Returns",
+  "product.feature.returns.desc": "Hassle-free returns",
+  "product.loginRequired.title": "Login Required",
+  "product.loginRequired.message": "Please login to add items to your cart",
+  "favorites.title": "Your Wishlist",
+  "favorites.empty.title": "Your Wishlist is Empty",
+  "favorites.empty.subtitle": "Start exploring and add items to your wishlist.",
+  "favorites.startExploring": "Start Exploring",
+  "favorites.itemsCount": "{count} Items in Wishlist",
+  "common.cancel": "Cancel",
+  "home.search.placeholder": "Search for premium products...",
+  "home.noProducts": "No products found",
+  "cart.empty.title": "Your Cart is Empty",
+  "cart.empty.subtitle": "Looks like you haven't added anything to your cart yet.",
+  "cart.startShopping": "Start Shopping",
+  "cart.title": "Your Cart",
+  "cart.subtotal": "Subtotal",
+  "cart.total": "Total",
+  "cart.checkout": "Proceed to Checkout",
+  "profile.title": "Profile",
+  "profile.general": "General",
+  "profile.settings": "Settings",
+  "profile.signOut": "Sign Out"
 }
