--- a/mobile/i18n/tr.json
+++ b/mobile/i18n/tr.json
@@ -1,25 +1,38 @@
 {
-  "auth.login.title": "Tekrar Hoşgeldiniz",
-  "auth.login.subtitle": "Alışverişe devam etmek için giriş yapın",
-  "auth.login.username": "Kullanıcı Adı",
-  "auth.login.password": "Şifre",
-  "auth.login.forgot": "Şifrenizi mi unuttunuz?",
-  "auth.login.button": "Giriş Yap",
-  "auth.login.noAccount": "Hesabınız yok mu? ",
-  "auth.login.register": "Kayıt Ol",
-  "auth.register.title": "Hesap Oluştur",
-  "auth.register.subtitle": "Bize katılın ve alışverişe başlayın",
-  "auth.register.fullName": "Ad Soyad",
-  "auth.register.email": "E-posta",
-  "auth.register.username": "Kullanıcı Adı",
-  "auth.register.password": "Şifre",
-  "auth.register.button": "Kayıt Ol",
-  "auth.register.hasAccount": "Zaten bir hesabınız var mı? ",
-  "auth.register.login": "Giriş Yap",
   "common.error": "Hata",
   "common.success": "Başarılı",
   "common.ok": "Tamam",
   "common.cancel": "İptal",
+  "auth.login.title": "Tekrar Hoşgeldiniz",
+  "auth.login.subtitle": "Küratörlüğünü yaptığımız alışveriş deneyimine devam etmek için giriş yapın.",
+  "auth.login.email.label": "E-POSTA ADRESİ",
+  "auth.login.email.placeholder": "isim@ornek.com",
+  "auth.login.password.label": "ŞİFRE",
+  "auth.login.password.placeholder": "••••••••",
+  "auth.login.forgot": "Şifrenizi mi unuttunuz?",
+  "auth.login.button": "Giriş Yap",
+  "auth.login.biometric": "Face ID ile giriş yap",
+  "auth.login.orConnect": "Veya şununla bağlan",
+  "auth.login.google": "Google",
+  "auth.login.apple": "Apple",
+  "auth.login.noAccount": "Hesabınız yok mu?",
+  "auth.login.signUp": "Kayıt Ol",
+  "auth.register.title": "Hesap Oluştur",
+  "auth.register.subtitle": "Özel topluluğumuza katılın",
+  "auth.register.fullName.label": "AD SOYAD",
+  "auth.register.fullName.placeholder": "Ahmet Yılmaz",
+  "auth.register.email.label": "E-POSTA ADRESİ",
+  "auth.register.password.label": "ŞİFRE",
+  "auth.register.confirmPassword.label": "ŞİFREYİ ONAYLA",
+  "auth.register.button": "Hesap Oluştur",
+  "auth.register.hasAccount": "Zaten bir hesabınız var mı?",
+  "auth.register.login": "Giriş Yap",
+  "auth.error.fillAll": "Lütfen tüm alanları doldurun",
+  "auth.error.passwordMismatch": "Şifreler eşleşmiyor",
+  "auth.error.registrationFailed": "Kayıt Başarısız",
+  "auth.error.loginFailed": "Giriş Başarısız",
+  "auth.error.biometricNotFound": "Biyometrik bilgiler bulunamadı. Lütfen önce manuel giriş yapın.",
+  "auth.error.input": "Giriş Hatası",
   "home.search.placeholder": "Ürün ara...",
   "home.noProducts": "Ürün bulunamadı",
   "product.details.back": "Geri Dön",
@@ -53,5 +66,80 @@
   "admin.manage.imageUrl": "Görsel URL",
   "admin.manage.stock": "Stok",
   "admin.manage.update": "Ürünü Güncelle",
-  "admin.manage.create": "Ürün Oluştur"
+  "admin.manage.create": "Ürün Oluştur",
+  "account.title": "Hesap",
+  "account.security": "Güvenlik",
+  "account.biometric": "Biyometrik Giriş (FaceID)",
+  "account.changePassword": "Şifre Değiştir",
+  "account.personalData": "Kişisel Veriler",
+  "account.editProfile": "Profili Düzenle",
+  "account.paymentMethods": "Ödeme Yöntemleri",
+  "account.orderHistory": "Sipariş Geçmişi",
+  "account.dangerZone": "Tehlikeli Bölge",
+  "account.deleteAccount": "Hesabı Sil",
+  "account.biometric.success.title": "FaceID Aktif",
+  "account.biometric.success.message": "Biyometrik giriş başarıyla aktif edildi. Artık şifre girmene gerek yok!",
+  "account.biometric.error.title": "Hata",
+  "account.biometric.error.message": "Hatalı şifre. Lütfen tekrar deneyin.",
+  "settings.title": "Ayarlar",
+  "settings.notifications": "Bildirimler",
+  "settings.theme": "Görünüm",
+  "settings.language": "Dil",
+  "settings.defaultView": "Varsayılan Görünüm",
+  "settings.legal.imprint": "Künye",
+  "settings.legal.accessibility": "Erişilebilirlik",
+  "settings.legal.tracking": "İzleme Bilgileri",
+  "settings.legal.privacy": "Gizlilik Politikası",
+  "settings.theme.choose": "Görünüm Seç",
+  "settings.theme.light": "Açık",
+  "settings.theme.dark": "Koyu",
+  "settings.theme.system": "Sistem",
+  "settings.language.choose": "Dil Seçin",
+  "home.loginRequired.title": "Giriş Gerekli",
+  "home.loginRequired.message": "İstek listesine eklemek için lütfen giriş yapın",
+  "home.newBadge": "YENİ",
+  "home.catalog": "Katalog",
+  "home.section.newArrivals": "Yeni Gelenler",
+  "home.viewAll": "Hepsini Gör",
+  "category.all": "Tümü",
+  "category.electronics": "Elektronik",
+  "category.fashion": "Moda",
+  "category.home": "Ev",
+  "category.books": "Kitaplar",
+  "cart.freeShipping.away": "Ücretsiz kargo için {amount} kaldı",
+  "cart.freeShipping.unlocked": "Ücretsiz kargo hakkı kazandınız!",
+  "cart.shipping": "Kargo",
+  "cart.shipping.free": "ÜCRETSİZ",
+  "cart.checkout.processing": "Ödeme işlemi başlatılıyor...",
+  "profile.notifications.sub": "0 yeni",
+  "profile.myProfile": "Profil",
+  "profile.myProfile.sub": "İsim, Profil Resmi...",
+  "profile.account": "Hesap",
+  "profile.account.sub": "Veriler, Güvenlik, Plus...",
+  "profile.settings.sub": "Dil, Görünüm...",
+  "profile.achievements": "Başarılar",
+  "profile.achievements.sub": "Rozetler",
+  "profile.adminDashboard": "Admin Paneli",
+  "profile.adminDashboard.sub": "Kullanıcılar & İstatistikler...",
+  "product.notFound": "Ürün bulunamadı",
+  "product.goBack": "Geri Dön",
+  "product.limitedEdition": "Sınırlı Edisyon",
+  "product.reviews": "değerlendirme",
+  "product.selectSize": "Beden Seçin",
+  "product.addToCart": "Sepete Ekle",
+  "product.addedToCart": "Sepete Eklendi!",
+  "product.features": "Ürün Özellikleri",
+  "product.feature.shipping": "Ücretsiz Kargo",
+  "product.feature.shipping.desc": "50 TL üstü siparişlerde",
+  "product.feature.authentic": "%100 Orijinal",
+  "product.feature.authentic.desc": "Doğrulanmış ürünler",
+  "product.feature.returns": "30 Gün İade",
+  "product.feature.returns.desc": "Kolay iade",
+  "product.loginRequired.title": "Giriş Gerekli",
+  "product.loginRequired.message": "Sepete ürün eklemek için lütfen giriş yapın",
+  "favorites.title": "İstek Listeniz",
+  "favorites.empty.title": "İstek Listeniz Boş",
+  "favorites.empty.subtitle": "Keşfetmeye başlayın ve istek listenize ürünler ekleyin.",
+  "favorites.startExploring": "Keşfetmeye Başla",
+  "favorites.itemsCount": "İstek listesinde {count} ürün"
 }
