feat: Add `profile.logout.error` translation key and integrate it into the profile screen's logout error handling.

--- a/mobile/i18n/de.json
+++ b/mobile/i18n/de.json
@@ -101,6 +101,7 @@
   "profile.adminDashboard": "Admin-Dashboard",
   "profile.adminDashboard.sub": "Benutzer & Statistiken...",
   "profile.signOut": "Abmelden",
+  "profile.logout.error": "Abmeldung fehlgeschlagen. Bitte versuchen Sie es erneut.",
   "product.notFound": "Produkt nicht gefunden",
   "product.goBack": "Zurück",
   "product.limitedEdition": "Limitierte Auflage",
