--- a/mobile/i18n/en.json
+++ b/mobile/i18n/en.json
@@ -33,25 +33,25 @@
   "auth.error.loginFailed": "Login Failed",
   "auth.error.biometricNotFound": "Biometric credentials not found. Please login manually first.",
   "auth.error.input": "Input Error",
-  "home.search.placeholder": "Search products...",
+  "home.search.placeholder": "Search for premium products...",
   "home.noProducts": "No products found",
   "product.details.back": "Go Back",
   "product.details.price": "Price",
   "product.details.addToCart": "Add to Cart",
   "product.details.outOfStock": "Out of Stock",
-  "cart.title": "My Cart",
-  "cart.empty.title": "Your cart is empty",
+  "cart.title": "Your Cart",
+  "cart.empty.title": "Your Cart is Empty",
   "cart.empty.subtitle": "Looks like you haven't added anything to your cart yet.",
   "cart.startShopping": "Start Shopping",
   "cart.total": "Total",
   "cart.subtotal": "Subtotal",
-  "cart.checkout": "Checkout",
-  "profile.title": "My Profile",
+  "cart.checkout": "Proceed to Checkout",
+  "profile.title": "Profile",
   "profile.loginRequired": "Please login to see your profile",
   "profile.general": "General",
   "profile.orders": "My Orders",
   "profile.payments": "Payment Methods",
-  "profile.settings": "Account Settings",
+  "profile.settings": "Settings",
   "profile.admin": "Admin Panel",
   "profile.signOut": "Sign Out",
   "profile.logout.error": "Logout failed. Please try again.",
@@ -143,18 +143,20 @@
   "favorites.empty.subtitle": "Start exploring and add items to your wishlist.",
   "favorites.startExploring": "Start Exploring",
   "favorites.itemsCount": "{count} Items in Wishlist",
-  "common.cancel": "Cancel",
-  "home.search.placeholder": "Search for premium products...",
-  "home.noProducts": "No products found",
-  "cart.empty.title": "Your Cart is Empty",
-  "cart.empty.subtitle": "Looks like you haven't added anything to your cart yet.",
-  "cart.startShopping": "Start Shopping",
-  "cart.title": "Your Cart",
-  "cart.subtotal": "Subtotal",
-  "cart.total": "Total",
-  "cart.checkout": "Proceed to Checkout",
-  "profile.title": "Profile",
-  "profile.general": "General",
-  "profile.settings": "Settings",
-  "profile.signOut": "Sign Out"
+  "forgotPassword.title": "Forgot Password?",
+  "forgotPassword.subtitle": "Enter your email and we'll send you a code to reset your password",
+  "forgotPassword.emailLabel": "Email Address",
+  "forgotPassword.sendCode": "Send Code",
+  "forgotPassword.codeLabel": "Verification Code",
+  "forgotPassword.codePlaceholder": "6-digit code",
+  "forgotPassword.verifyCode": "Verify Code",
+  "forgotPassword.newPassword": "New Password",
+  "forgotPassword.confirmPassword": "Confirm Password",
+  "forgotPassword.resetPassword": "Reset Password",
+  "forgotPassword.success": "Password reset successfully!",
+  "forgotPassword.codeSent": "Code sent to your email",
+  "forgotPassword.invalidCode": "Invalid or expired code",
+  "forgotPassword.passwordMismatch": "Passwords do not match",
+  "forgotPassword.backToLogin": "Back to Login",
+  "auth.error.required": "Required"
 }
