feat: Add stock status indicator to product listings and details pages, including new translation keys.

--- a/mobile/i18n/de.json
+++ b/mobile/i18n/de.json
@@ -106,6 +106,7 @@
   "product.goBack": "Zurück",
   "product.limitedEdition": "Limitierte Auflage",
   "product.reviews": "Bewertungen",
+  "product.stock.available": "Lager: {count} Stück",
   "product.selectSize": "Größe auswählen",
   "product.addToCart": "In den Warenkorb",
   "product.addedToCart": "Zum Warenkorb hinzugefügt!",
