--- a/mobile/i18n/en.json
+++ b/mobile/i18n/en.json
@@ -39,6 +39,7 @@
   "product.details.price": "Price",
   "product.details.addToCart": "Add to Cart",
   "product.details.outOfStock": "Out of Stock",
+  "product.stock.available": "Stock: {count} left",
   "cart.title": "Your Cart",
   "cart.empty.title": "Your Cart is Empty",
   "cart.empty.subtitle": "Looks like you haven't added anything to your cart yet.",
