feat: Implement address management with dedicated mobile UI, server API, and shared schema updates.

--- a/mobile/i18n/de.json
+++ b/mobile/i18n/de.json
@@ -3,6 +3,10 @@
   "common.success": "Erfolg",
   "common.ok": "OK",
   "common.cancel": "Abbrechen",
+  "common.confirm": "Bestätigen",
+  "common.delete": "Löschen",
+  "common.edit": "Bearbeiten",
+  "common.default": "Standard",
   "auth.login.title": "Willkommen zurück",
   "auth.login.subtitle": "Melden Sie sich an, um Ihr exklusives Einkaufserlebnis fortzusetzen.",
   "auth.login.email.label": "E-MAIL ADRESSE",
@@ -160,5 +164,52 @@
   "validation.password.req.upper": "Ein Großbuchstabe",
   "validation.password.req.lower": "Ein Kleinbuchstabe",
   "validation.password.req.number": "Eine Zahl",
-  "validation.password.req.special": "Ein Sonderzeichen (@$!%*?&.)"
+  "validation.password.req.special": "Ein Sonderzeichen (@$!%*?&.)",
+  "profile.editProfile": "Profil bearbeiten",
+  "profile.myAddresses": "Meine Adressen",
+  "profile.noAddresses": "Noch keine Adressen hinzugefügt",
+  "address.type.delivery": "Lieferadresse",
+  "address.type.invoice": "Rechnungsadresse",
+  "address.fullName": "Vollständiger Name",
+  "address.line1": "Straße und Hausnummer",
+  "address.line2": "Adresszusatz (Etage, Wohnung, etc.)",
+  "address.city": "Stadt",
+  "address.zipCode": "Postleitzahl",
+  "address.country": "Land",
+  "address.phone": "Telefonnummer",
+  "address.setAsDefault": "Als Standard festlegen",
+  "address.edit": "Adresse bearbeiten",
+  "address.add": "Neue Adresse hinzufügen",
+  "address.save": "Adresse speichern",
+  "address.delete.confirm": "Sind Sie sicher, dass Sie diese Adresse löschen möchten?",
+  "profile.username": "Benutzername",
+  "profile.fullName": "Vollständiger Name",
+  "profile.email": "E-Mail",
+  "profile.saveChanges": "Änderungen speichern",
+  "profile.updateSuccess": "Profil erfolgreich aktualisiert",
+  "profile.updateError": "Fehler beim Aktualisieren des Profils",
+  "country.TR": "Türkei",
+  "country.DE": "Deutschland",
+  "country.AT": "Österreich",
+  "country.BE": "Belgien",
+  "country.FR": "Frankreich",
+  "country.IT": "Italien",
+  "country.ES": "Spanien",
+  "country.NL": "Niederlande",
+  "country.SE": "Schweden",
+  "country.PL": "Polen",
+  "country.GR": "Griechenland",
+  "country.PT": "Portugal",
+  "country.IE": "Irland",
+  "country.CH": "Schweiz",
+  "country.GB": "Vereinigtes Königreich",
+  "country.FI": "Finnland",
+  "country.DK": "Dänemark",
+  "country.NO": "Norwegen",
+  "country.US": "Vereinigte Staaten",
+  "country.CA": "Kanada",
+  "country.MX": "Mexiko",
+  "country.BR": "Brasilien",
+  "country.AR": "Argentinien",
+  "address.country.select": "Land auswählen"
 }
