--- a/mobile/i18n/en.json
+++ b/mobile/i18n/en.json
@@ -3,6 +3,10 @@
   "common.success": "Success",
   "common.ok": "OK",
   "common.cancel": "Cancel",
+  "common.confirm": "Confirm",
+  "common.delete": "Delete",
+  "common.edit": "Edit",
+  "common.default": "Default",
   "auth.login.title": "Welcome Back",
   "auth.login.subtitle": "Sign in to continue your curated shopping experience.",
   "auth.login.email.label": "EMAIL ADDRESS",
@@ -166,5 +170,52 @@
   "validation.password.req.upper": "One uppercase letter",
   "validation.password.req.lower": "One lowercase letter",
   "validation.password.req.number": "One number",
-  "validation.password.req.special": "One special character (@$!%*?&.)"
+  "validation.password.req.special": "One special character (@$!%*?&.)",
+  "profile.editProfile": "Edit Profile",
+  "profile.myAddresses": "My Addresses",
+  "profile.noAddresses": "No addresses added yet",
+  "address.type.delivery": "Delivery Address",
+  "address.type.invoice": "Invoice Address",
+  "address.fullName": "Full Name",
+  "address.line1": "Street and House Number",
+  "address.line2": "Additional Address (Apt, Suite, etc.)",
+  "address.city": "City",
+  "address.zipCode": "Zip Code",
+  "address.country": "Country",
+  "address.phone": "Phone Number",
+  "address.setAsDefault": "Set as Default",
+  "address.edit": "Edit Address",
+  "address.add": "Add New Address",
+  "address.save": "Save Address",
+  "address.delete.confirm": "Are you sure you want to delete this address?",
+  "profile.username": "Username",
+  "profile.fullName": "Full Name",
+  "profile.email": "Email",
+  "profile.saveChanges": "Save Changes",
+  "profile.updateSuccess": "Profile updated successfully",
+  "profile.updateError": "Error updating profile",
+    "country.TR": "Turkey",
+    "country.DE": "Germany",
+    "country.AT": "Austria",
+    "country.BE": "Belgium",
+    "country.FR": "France",
+    "country.IT": "Italy",
+    "country.ES": "Spain",
+    "country.NL": "Netherlands",
+    "country.SE": "Sweden",
+    "country.PL": "Poland",
+    "country.GR": "Greece",
+    "country.PT": "Portugal",
+    "country.IE": "Ireland",
+    "country.CH": "Switzerland",
+    "country.GB": "United Kingdom",
+    "country.FI": "Finland",
+    "country.DK": "Denmark",
+    "country.NO": "Norway",
+    "country.US": "United States",
+    "country.CA": "Canada",
+    "country.MX": "Mexico",
+    "country.BR": "Brazil",
+    "country.AR": "Argentina",
+    "address.country.select": "Select Country"
 }
