--- a/mobile/i18n/tr.json
+++ b/mobile/i18n/tr.json
@@ -3,6 +3,10 @@
   "common.success": "Başarılı",
   "common.ok": "Tamam",
   "common.cancel": "İptal",
+  "common.confirm": "Onayla",
+  "common.delete": "Sil",
+  "common.edit": "Düzenle",
+  "common.default": "Varsayılan",
   "auth.login.title": "Tekrar Hoşgeldiniz",
   "auth.login.subtitle": "Küratörlüğünü yaptığımız alışveriş deneyimine devam etmek için giriş yapın.",
   "auth.login.email.label": "E-POSTA ADRESİ",
@@ -166,5 +170,52 @@
   "validation.password.req.upper": "Bir büyük harf",
   "validation.password.req.lower": "Bir küçük harf",
   "validation.password.req.number": "Bir rakam",
-  "validation.password.req.special": "Bir özel karakter (@$!%*?&.)"
+  "validation.password.req.special": "Bir özel karakter (@$!%*?&.)",
+  "profile.editProfile": "Profili Düzenle",
+  "profile.myAddresses": "Adreslerim",
+  "profile.noAddresses": "Henüz adres eklenmemiş",
+  "address.type.delivery": "Teslimat Adresi",
+  "address.type.invoice": "Fatura Adresi",
+  "address.fullName": "Ad Soyad",
+  "address.line1": "Sokak ve Ev Numarası",
+  "address.line2": "Ek Adres (Kat, Daire, vb.)",
+  "address.city": "Şehir",
+  "address.zipCode": "Posta Kodu",
+  "address.country": "Ülke",
+  "address.phone": "Telefon Numarası",
+  "address.setAsDefault": "Varsayılan Yap",
+  "address.edit": "Adresi Düzenle",
+  "address.add": "Yeni Adres Ekle",
+  "address.save": "Adresi Kaydet",
+  "address.delete.confirm": "Bu adresi silmek istediğinizden emin misiniz?",
+  "profile.username": "Kullanıcı Adı",
+  "profile.fullName": "Ad Soyad",
+  "profile.email": "E-posta",
+  "profile.saveChanges": "Değişiklikleri Kaydet",
+  "profile.updateSuccess": "Profil başarıyla güncellendi",
+  "profile.updateError": "Profil güncellenirken hata oluştu",
+    "country.TR": "Türkiye",
+    "country.DE": "Almanya",
+    "country.AT": "Avusturya",
+    "country.BE": "Belçika",
+    "country.FR": "Fransa",
+    "country.IT": "İtalya",
+    "country.ES": "İspanya",
+    "country.NL": "Hollanda",
+    "country.SE": "İsveç",
+    "country.PL": "Polonya",
+    "country.GR": "Yunanistan",
+    "country.PT": "Portekiz",
+    "country.IE": "İrlanda",
+    "country.CH": "İsviçre",
+    "country.GB": "Birleşik Krallık",
+    "country.FI": "Finlandiya",
+    "country.DK": "Danimarka",
+    "country.NO": "Norveç",
+    "country.US": "Amerika Birleşik Devletleri",
+    "country.CA": "Kanada",
+    "country.MX": "Meksika",
+    "country.BR": "Brezilya",
+    "country.AR": "Arjantin",
+  "address.country.select": "Ülke Seçin"
 }
