refactor: Replace TouchableOpacity with Pressable, optimize root layout, and improve address form handling.

--- a/mobile/i18n/de.json
+++ b/mobile/i18n/de.json
@@ -212,6 +212,7 @@
   "country.BR": "Brasilien",
   "country.AR": "Argentinien",
   "address.country.select": "Land auswählen",
+  "address.country.search": "Land suchen...",
   "profile.avatar.select": "Profilbild auswählen",
   "profile.avatar.camera": "Kamera",
   "profile.avatar.camera.sub": "Ein Foto machen",
