--- a/mobile/i18n/tr.json
+++ b/mobile/i18n/tr.json
@@ -218,6 +218,7 @@
     "country.BR": "Brezilya",
     "country.AR": "Arjantin",
   "address.country.select": "Ülke Seçin",
+  "address.country.search": "Ülke ara...",
   "profile.avatar.select": "Profil Resmi Seç",
   "profile.avatar.camera": "Kamera",
   "profile.avatar.camera.sub": "Fotoğraf çek",
